--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,7 @@
                         <version>1.6</version>
                         <executions>
                             <execution>
+                                <id>ossrh</id>
                                 <phase>verify</phase>
                                 <goals>
                                     <goal>sign</goal>
